# upsilon

./: .gitignore  .gitmodules  A7-constraints.xdc  COPYING  GUIDELINES.md  README.md  clean.sh  soc.py
boot/: boot.json
buildroot/: COPYING  external.desc
buildroot/board/litex_vexriscv/: linux.config
buildroot/configs/: litex_vexriscv_defconfig
client/: control_loop_test.py  noise_test.py  util.py
copying/: COPYING.buildroot  README.md  index.md
doc/: controller_manual.md  controller_manual.rst  docker.md  fixedpoint.py  gateware.rst  hardware_notes.md  maintenance_manual.md  organization.md  programmers_manual.md  setup_client.sh  swic.rst  todo.md  user_manual.md  verilog_manual.md
doc/copying/: COPYING.opensbi  README.md
firmware/: COPYING  Makefile  generate_csr_locations.py  soc.py
firmware/rtl/: Makefile  boilerplate.cpp  common.makefile  sign_extend.v  testbench.hpp  util.hpp
firmware/rtl/autoapproach/: Makefile  autoapproach.v  dma_sim.v  (+4 more)
firmware/verilator/: boothmul_sim.cpp
gateware/: Makefile  board_io.py  config.py.def  csr2mp.py  extio.py  mmio_descr.py  region.py  soc.py  swic.py  util.py
gateware/rtl/: Makefile  common.makefile  testbench.hpp  util.hpp
linux/: AD5791.py  AD5791_demo.py  LTC2336_demo.py  LTC_ADC.py  Makefile  comm.py  control_loop_test.py  noise_test.py  picorv32.py  ramp.mpy  registers.py  spi.py  test.mpy  test_dac.py  waveform.py  waveform_demo.py
linux/demos/: AD5791_demo.py  LTC2336_demo.py  picorv32_demo.py
linux/lib/: AD5791.py  pd_pipeline.py  pi_pipeline.py  picorv32.py  random.py  registers.py  waveform.py
software/: CMakeLists.txt  COPYING  Kconfig  Makefile  manual_dhcp.c  mk.sh  prj.conf
software/src/: access.c  access.h  buf.c  buf.h  creole_interface.c  dac_adc_test_main.c  io.c  io.h  jsmn.h  lsc.h  main.c  msg.c  msg.h  sock.c  sock.h  test_dac_adc_main.c  test_ethernet.c  upsilon.h
software/src/tests/: test_ethernet.c
swic/: Makefile  custom_ops.h  custom_ops.s  load_exec.py  main.c  picorv32.py  riscv.ld  start.s  test.c
(+145 files in other folders)
